--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set-option -g status-fg white
 
 set-option -g window-status-current-bg white
 set-option -g window-status-current-fg black
+set -g set-titles-string "#T"
 
 set-window-option -g mode-keys vi
 
@@ -27,3 +28,9 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 bind-key C-c run "save-buffer ~/.tmux-buffer - | xclip -i -selection clipboard"
+
+bind r source-file ~/.tmux.conf
+bind-key -n C-left swap-window -t -1
+bind-key -n C-right swap-window -t +1
+bind-key -n C-k resize-pane -U
+bind-key -n C-j resize-pane -D
