--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g history-limit 10000
 #set -g mode-mouse on
 
 set-option -g prefix M-a
-set-option -g status-position top
+bind M-a send-prefix
 set-option -g status-bg black
 set-option -g status-fg white
 
