--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,15 @@
+bind M-a send-prefix
+
 set -g default-terminal "screen-256color"
 set -g base-index 1
 set -g history-limit 10000
-#set -g mode-mouse on
+set -g escape-time 10
 
+set-option -g status-position top
 set-option -g prefix M-a
-bind M-a send-prefix
 set-option -g status-bg black
 set-option -g status-fg white
+#set-option -g pane-active-border-stype fg=blue
 
 set-option -g window-status-current-bg white
 set-option -g window-status-current-fg black
@@ -15,8 +18,11 @@ set -g set-titles-string "#T"
 set-window-option -g mode-keys vi
 
 bind -n C-t new-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
 bind -n M-, prev
 bind -n M-. next
+bind -n M-Tab select-pane -t :.+
 
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
@@ -33,4 +39,11 @@ bind r source-file ~/.tmux.conf
 bind-key -n C-left swap-window -t -1
 bind-key -n C-right swap-window -t +1
 bind-key -n C-k resize-pane -U
-bind-key -n C-j resize-pane -D
+bind-key -n C-M-j resize-pane -D
+bind-key -n C-l resize-pane -R
+bind-key -n C-h resize-pane -L
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
+run '~/.tmux/plugins/tpm/tpm'
