--- a/.teamocil/sys.yml
+++ b/.teamocil/sys.yml
@@ -3,13 +3,17 @@ windows:
   - name: htop
     panes:
       - sudo htop
-  - name: openvpn
-    root: ~/workspace/jive
-    panes:
-      - sudo openvpn --config client.ovpn --script-security 2 --up /etc/openvpn/up.sh
-  - name: xo
-    panes:
-      - tail -f -n100 ~/crossoverFiles/logs/deskapp.log
+  #- name: Kerio
+  #  root: ~/workspace/aurea
+  #  layout: tiled
+  #  panes:
+  #      #- sudo openvpn --config client.ovpn --script-security 2 --up /etc/openvpn/up.sh --down /etc/openvpn/down.sh
+  #    - echo - sleep 10; pgrep kvpncsvc;
+  #    - tail -f /home/jiojiajiu/local/kerio/lib/logs/debug.log
+  #    - tail -f /home/jiojiajiu/local/kerio/lib/logs/error.log
+  #- name: xo
+  #  panes:
+  #    - tail -f -n100 ~/crossoverFiles/logs/deskapp.log
   - name: logs
     panes:
       - tail -f /var/log/kernel -n 100
