--- a/.teamocil/bazel.yml
+++ b/.teamocil/bazel.yml
@@ -2,7 +2,7 @@ name: Bazel
 windows:
   - name: Bazel
     root: ~/workspace/bazel/bazel/
-    layout: 33bb,212x55,0,0[212x45,0,0,9,212x9,0,46,10] #tmux list-windows -F "#{window_active} #{window_layout}" | grep "^1" | cut -d " " -f 2
+    layout: 94cb,212x55,0,0[212x45,0,0,16,212x9,0,46{106x9,0,46,17,105x9,107,46,25}] #tmux list-windows -F "#{window_active} #{window_layout}" | grep "^1" | cut -d " " -f 2
     panes:
       - vi
       - commands:
