Migrate tmux from 1.9 to 2.x

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,7 @@ set-option -g status-bg black
 set-option -g status-fg white
 #set-option -g pane-active-border-stype fg=blue
 
-set-option -g window-status-current-bg white
-set-option -g window-status-current-fg black
+set-option -g window-status-current-style bg=white,fg=black
 set -g set-titles-string "#T"
 
 set-window-option -g mode-keys vi
