--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
+unbind C-b
+set -g prefix M-a
 bind M-a send-prefix
 
 set -g default-terminal "screen-256color"
 set -g base-index 1
-set -g history-limit 10000
+set -g history-limit 100000
 set -g escape-time 10
 
 set-option -g status-position top
@@ -35,8 +37,8 @@ bind-key -n M-9 select-window -t 9
 bind-key C-c run "save-buffer ~/.tmux-buffer - | xclip -i -selection clipboard"
 
 bind r source-file ~/.tmux.conf
-bind-key -n C-left swap-window -t -1
-bind-key -n C-right swap-window -t +1
+bind-key -n C-left swap-window -t -1\; select-window -t -1
+bind-key -n C-right swap-window -t +1\; select-window -t +1
 bind-key -n C-k resize-pane -U
 bind-key -n C-M-j resize-pane -D
 bind-key -n C-l resize-pane -R
@@ -44,5 +46,7 @@ bind-key -n C-h resize-pane -L
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %d-%h %H:%M '
+set -g status-right '#{battery_icon} #{battery_percentage} | %a %d-%h %H:%M '
 run '~/.tmux/plugins/tpm/tpm'
